fixed mobile logo garden spacing

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -2209,6 +2209,11 @@ footer {
         }
       }
     }
+    section.meeting-cta {
+      .split {
+        grid-template-columns: 1fr;
+      }
+    }
   }
 
   main {
